Fix comment wrap

--- a/src/client/src/styles/ReportDetails.module.css
+++ b/src/client/src/styles/ReportDetails.module.css
@@ -8,6 +8,8 @@ div.details {
   display: flex;
   flex-flow: column nowrap;
   gap: 1rem;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 div.actions {
